<resources>
    <string name="app_name">Bill Time</string>
    <string name="cost_of_service">Cost of Service</string>
    <string name="how_was_the_service">How was the service?</string>
    <string name="amazing_service">Amazing (20%)</string>
    <string name="good_service">Good (18%)</string>
    <string name="okay_service">Okay (15%)</string>
    <string name="round_up_tip">Round up tip?</string>
    <string name="calculate">Calculate</string>
    <string name="tip_amount">Tip Amount: %s</string>
    <string name="split_the_bill">Split the Bill</string>
    <string name="split_bill_question">Wanna split a bill?</string>
    <string name="tip_calculator">Tip Calculator</string>
    <string name="bill_amount">Bill Amount</string>
    <string name="number_of_people">Number of People</string>
    <string name="split_amount">Cost per Person: %s</string>
    <string name="wanna_give_someone_a_tip">Wanna give someone a tip?</string>
    <string name="round_up_bill">Round up bill?</string>
</resources>