<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/tip_title"
                style="@style/Widget.BillTime.TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/tip_calculator"
                android:textSize="32sp"
                app:layout_constraintStart_toStartOf="@id/cost_of_service"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/icon_cost_of_service"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_store"
                android:importantForAccessibility="no"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/cost_of_service"
                app:layout_constraintBottom_toBottomOf="@id/cost_of_service"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/cost_of_service"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/colorAccent"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toEndOf="@id/icon_cost_of_service"
                app:layout_constraintTop_toBottomOf="@id/tip_title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/cost_of_service_edit_text"
                    android:hint="@string/cost_of_service"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"/>

            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/icon_service_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_service"
                android:importantForAccessibility="no"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/service_question"
                app:layout_constraintBottom_toBottomOf="@id/service_question"/>

            <TextView
                android:id="@+id/service_question"
                style="@style/Widget.BillTime.TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:layout_constraintTop_toBottomOf="@id/cost_of_service"
                app:layout_constraintStart_toEndOf="@id/icon_service_question"
                android:text="@string/how_was_the_service"/>

            <RadioGroup
                android:id="@+id/tip_options"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:checkedButton="@id/option_twenty_percent"
                app:layout_constraintTop_toBottomOf="@id/service_question"
                app:layout_constraintStart_toStartOf="@id/service_question">
                <RadioButton
                    android:id="@+id/option_twenty_percent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/amazing_service"/>

                <RadioButton
                    android:id="@+id/option_eighteen_percent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/good_service"/>

                <RadioButton
                    android:id="@+id/option_fifteen_percent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/okay_service"/>
            </RadioGroup>

            <ImageView
                android:id="@+id/icon_round_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_round_up"
                android:importantForAccessibility="no"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/round_up_switch"
                app:layout_constraintBottom_toBottomOf="@id/round_up_switch"/>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/round_up_switch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toEndOf="@id/icon_round_up"
                app:layout_constraintTop_toBottomOf="@id/tip_options"
                app:layout_constraintEnd_toEndOf="parent"
                android:checked="true"
                android:text="@string/round_up_tip"/>

            <Button
                android:id="@+id/calculate_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/colorAccent"
                app:layout_constraintTop_toBottomOf="@id/round_up_switch"
                app:layout_constraintStart_toStartOf="@id/round_up_switch"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/calculate"
                tools:targetApi="lollipop" />

            <TextView
                android:id="@+id/tip_result"
                style="@style/Widget.BillTime.TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/calculate_button"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="Tip Amount: $10" />

            <TextView
                android:id="@+id/nav_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tip_result"
                android:text="@string/split_bill_question"
                style="@style/Widget.BillTime.TextView"/>

            <Button
                android:id="@+id/split_the_bill_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/nav_question"
                android:layout_marginTop="8dp"
                android:text="@string/split_the_bill"
                android:backgroundTint="@color/colorAccent"
                tools:targetApi="lollipop" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>